Rename to cekopt

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pocket-article-length-sorter",
+  "name": "cekopt",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
