--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
   "author": "Gary Katsevman <me@gkatsev.com>",
   "license": "MIT",
   "dependencies": {
+    "es5-shim": "^4.1.0",
+    "es6-shim": "^0.24.0",
+    "global": "^4.3.0",
     "hapi": "^8.2.0",
     "node-getpocket": "^1.0.0",
     "node-uuid": "^1.4.2",
+    "xhr": "^2.0.1",
     "yar": "^3.0.3"
+  },
+  "devDependencies": {
+    "browserify": "^8.1.3"
+  },
+  "browser": {
+    "request": "xhr"
   }
 }
