--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hapi": "^8.2.0",
     "node-getpocket": "^1.0.0",
     "node-uuid": "^1.4.2",
+    "readability-api": "^0.4.0",
     "xhr": "^2.0.1",
     "yar": "^3.0.3"
   },
