--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "author": "Gary Katsevman <me@gkatsev.com>",
   "license": "MIT",
   "dependencies": {
+    "bluebird": "^2.9.9",
     "es5-shim": "^4.1.0",
     "es6-shim": "^0.24.0",
     "global": "^4.3.0",
     "hapi": "^8.2.0",
+    "node-fetch": "^1.0.4",
     "node-getpocket": "^1.0.0",
     "node-uuid": "^1.4.2",
     "readability-api": "^0.4.0",
