--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "bluebird": "^2.9.9",
+    "boom": "^2.6.1",
     "es5-shim": "^4.1.0",
     "es6-shim": "^0.24.0",
     "global": "^4.3.0",
