--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "es6-shim": "^0.24.0",
     "global": "^4.3.0",
     "hapi": "^8.2.0",
+    "level": "^0.18.0",
     "node-fetch": "^1.0.4",
     "node-getpocket": "^1.0.0",
     "node-uuid": "^1.4.2",
